Use more fluent approach for db api.